Homepage styling fix
Fixed issue where navbar links moved out of place after adding game cards. Also moved styling for game cards to home.css for better coding practices

--- a/cooler_math_games/static/cooler_math_games/home/home.css
+++ b/cooler_math_games/static/cooler_math_games/home/home.css
@@ -100,4 +100,22 @@ p {
     text-align: center;
 }
 
+.navbar-link {
+    margin-right: 3%;
+    white-space: nowrap;
+}
 
+
+.card {
+    width: 500px;
+    border: solid; 
+    border-radius: 20px;
+    background-color: rgb(42,69,93);
+    border-color: #ffaa55;
+    margin-top: 30px;
+}
+
+.card-img {
+    border-radius: 10px; 
+    margin-left: 10px;
+}
